--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,94 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-</head>
-<body>
-Hello {{ name }}
+	<head>
+		<title>
+			The One Minute Web App
+		</title>
+		<!-- This is our bootstrap theme -->
+		<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.0/united/bootstrap.min.css">
+		<!-- This is our custom stylesheet with anything we need to edit. -->
+		<link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/ingeniousinstruments.css">
+		
+	</head>
+	<body>
+		<div class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<!-- The name of your website, your brand if you will -->
+					<a href="/" class="navbar-brand">Ingenious Instruments</a>
+					<!-- This is the little hamburger you will see on the mobile version of your website -->
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="navbar-collapse collapse" id="navbar-main">
+					<!-- This is the menu, the list of things you could have on your website -->
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"> Invest <span class="caret"></span></a>
+							<ul class="dropdown-menu" aria-labelledby="themes">
+								<li><a href="">Before the divider</a></li>
+								<li class="divider"></li>
+								<li><a href="">After the divider</a></li>
+							</ul>
+						</li>
+					
+						<li>
+							<a href="#about">Team</a>
+						</li>
+						<li>
+							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
+							<a href="#upload">Upload Image</a>
+						</li>
+						<li><a>Shop</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="wrapper">
+			<div class="container">
+				<div class='jumbotron'> 
+					<div class="container">
+						<div class='hero'>
+				            <h1 class='text-center'>INGENIOUS INSTRUMENTS</h1>
+				            
+				            
+				        </div>
+				    </div>
+				</div>
+			<div class='container'>
+					<div class='row'>
+						<div class='centeredvideo'>
+							<iframe width="640" height="360" src="//www.youtube.com/embed/N_BUoi-jWSI" frameborder="0" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+				<div class='container'>
+					<div class='row'>
+						<div class='col-xs-4'>
+						Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.  
+					</div>
 
-<a href="/about/">About</a>
-</body>
+
+				</div>
+			</div>
+			<div class="push"></div>
+		</div>
+		<div class="footer-wrapper">
+			<footer>
+			    <div class="container">
+			        <ul>
+			            <li>About Us</li>
+			            <li>Contact</li>
+			        </ul>
+			    </div>
+			</footer>
+		</div>
+		<!-- This is jquery a lovely javascript library needed for bootstrap and hosted by Google -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<!-- This is bootstrap javascript to make dropdowns work and other cool javascript interactivity -->
+		<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+	</body>
 </html>
