updated home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -43,6 +43,9 @@
 							<a href="#upload">Upload Image</a>
 						</li>
 						<li><a>Shop</a></li>
+						<li>
+							<a href="#contact">Contact Us</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -67,7 +70,8 @@
 				</div>
 				<div class='container'>
 					<div class='row'>
-						<div class='col-xs-4'>
+						<div class='col-md-6 col-md-offset-3'>
+
 						Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.  
 					</div>
 
