--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
 		<title>
-			The One Minute Web App
+			Ingenious Instruments
 		</title>
 		<!-- This is our bootstrap theme -->
 		<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.0/united/bootstrap.min.css">
 		<!-- This is our custom stylesheet with anything we need to edit. -->
-		<link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/ingeniousinstruments.css">
 		
 	</head>
@@ -26,6 +26,18 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<!-- This is the menu, the list of things you could have on your website -->
 					<ul class="nav navbar-nav">
+						
+						<li> <a href="#about">About</a> </li>
+						<li>
+							<a href="#team">Meet the Team</a>
+						</li>
+						<li>
+							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
+							<a href="#upload">Upload Image</a>
+						</li>
+						<li>
+							<a href="#contact">Contact Us</a>
+						</li>
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"> Invest <span class="caret"></span></a>
 							<ul class="dropdown-menu" aria-labelledby="themes">
@@ -34,18 +46,7 @@
 								<li><a href="">After the divider</a></li>
 							</ul>
 						</li>
-					
-						<li>
-							<a href="#about">Team</a>
-						</li>
-						<li>
-							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
-							<a href="#upload">Upload Image</a>
-						</li>
 						<li><a>Shop</a></li>
-						<li>
-							<a href="#contact">Contact Us</a>
-						</li>
 					</ul>
 				</div>
 			</div>
@@ -55,41 +56,41 @@
 				<div class='jumbotron'> 
 					<div class="container">
 						<div class='hero'>
-				            <h1 class='text-center'>INGENIOUS INSTRUMENTS</h1>
-				            
+				            <h1 class='text-center'>Ingenious Instruments</h1>
+				            <h2 class='text-center'> A low cost ... </h2>
 				            
 				        </div>
 				    </div>
 				</div>
 			<div class='container'>
-					<div class='row'>
-						<div class='centeredvideo'>
-							<iframe width="640" height="360" src="//www.youtube.com/embed/N_BUoi-jWSI" frameborder="0" allowfullscreen></iframe>
-						</div>
+				<div class='row'>
+					<div class='centeredvideo'>
+						<iframe width="640" height="360" src="//www.youtube.com/embed/N_BUoi-jWSI" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
-				<div class='container'>
-					<div class='row'>
-						<div class='col-md-6 col-md-offset-3'>
+				<div class='row top-padding'>
+					<div class='col-md-8 col-md-offset-2'>
+					<h3>About Us</h3>
+					<a name="about"></a>
+					<p>
+						Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.
+					</p>
+				</div>
 
-						Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.  
-					</div>
+				<div class='row top-padding'>
+					<div class='col-md-8 col-md-offset-2'>
+					<h3>Meet the Team</h3>
+					<a name="about"></a>
+					<p>
+						Josie Hughes
 
-
+					</p>
+				</div>
 				</div>
 			</div>
 			<div class="push"></div>
 		</div>
-		<div class="footer-wrapper">
-			<footer>
-			    <div class="container">
-			        <ul>
-			            <li>About Us</li>
-			            <li>Contact</li>
-			        </ul>
-			    </div>
-			</footer>
-		</div>
+	
 		<!-- This is jquery a lovely javascript library needed for bootstrap and hosted by Google -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<!-- This is bootstrap javascript to make dropdowns work and other cool javascript interactivity -->
