--- a/templates/home.html
+++ b/templates/home.html
@@ -69,13 +69,17 @@
 					</div>
 				</div>
 				<div class='row top-padding'>
-					<div class='col-md-8 col-md-offset-2'>
+				<div class='col-md-4 col-md-offset-1'>
 					<h3>About Us</h3>
 					<a name="about"></a>
 					<p>
 						Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.
 					</p>
 				</div>
+				<div class='col-md-5'>
+						<img src="scope.png" class="img-rounded img-responsive"> 
+				</div>
+
 
 				<div class='row top-padding'>
 					<div class='col-md-8 col-md-offset-2'>
