--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,7 @@
 					<div class="container">
 						<div class='hero'>
 				            <h1 class='text-center'>Ingenious Instruments</h1>
-				            <h2 class='text-center'> A low cost ... </h2>
+				            <h3 class='text-center'>Low cost, high precision scientific devices</h3>
 				            
 				        </div>
 				    </div>
@@ -69,29 +69,34 @@
 					</div>
 				</div>
 				<div class='row top-padding'>
-				<div class='col-md-4 col-md-offset-1'>
-					<h3>About Us</h3>
-					<a name="about"></a>
-					<p>
-						Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.
-					</p>
+					<div class='col-md-4 col-md-offset-1'>
+						<h3>About Us</h3>
+					</div>
 				</div>
-				<div class='col-md-5'>
-						<img src="scope.png" class="img-rounded img-responsive"> 
+				<div class='row'>
+					<div class='col-md-4 col-md-offset-1'>
+
+						<a name="about"></a>
+						<p>
+							Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.
+						</p>
+						<p>
+							Our devices aim to fill a current need in science or healthcare by improving upon an existing technology or by designing a device to serve a need that has been clearly defined by researchers or medical professionals. The products will be designed into kits which can be easily assembled. The products will be priced to be lower than currently available products of a similar quality with the cost saving coming from the use of open source software and hardware, innovative mechanical designs and rapid prototyping for testing. 
+						</p>
+					</div>
+					<div class='col-md-5'>
+							<img src="scope.png" class="img-rounded img-responsive"> 
+					</div>
 				</div>
-
-
 				<div class='row top-padding'>
-					<div class='col-md-8 col-md-offset-2'>
-					<h3>Meet the Team</h3>
-					<a name="about"></a>
-					<p>
-						Josie Hughes
+					<div class='col-md-8 col-md-offset-3'>
+						<a name="contact"></a>
+						<h3>Get keen! Sign up for our newsletter!</h3>
+					</div>
+				</div>
 
-					</p>
-				</div>
-				</div>
-			</div>
+
+
 			<div class="push"></div>
 		</div>
 	
