Finished investors page

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,26 +27,16 @@
 					<!-- This is the menu, the list of things you could have on your website -->
 					<ul class="nav navbar-nav">
 						
-						<li> <a href="/about">About</a> </li>
+						<li> <a href="#about">About</a> </li>
 						<li>
-							<a href="#team">Meet the Team</a>
+							<a href="investors.html">Business Model</a>
 						</li>
 						<li>
-							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
 							<a href="/upload">Upload Image</a>
 						</li>
 						<li>
 							<a href="#contact">Contact Us</a>
 						</li>
-						<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"> Invest <span class="caret"></span></a>
-							<ul class="dropdown-menu" aria-labelledby="themes">
-								<li><a href="">Before the divider</a></li>
-								<li class="divider"></li>
-								<li><a href="">After the divider</a></li>
-							</ul>
-						</li>
-						<li><a>Shop</a></li>
 					</ul>
 				</div>
 			</div>
@@ -70,13 +60,14 @@
 				</div>
 				<div class='row top-padding'>
 					<div class='col-md-4 col-md-offset-1'>
+						<a name="about"></a>
 						<h3>About Us</h3>
 					</div>
 				</div>
 				<div class='row'>
 					<div class='col-md-4 col-md-offset-1'>
 
-						<a name="about"></a>
+						
 						<p>
 							Ingenious Instruments is a scientific device development venture that intends to design and market scientific devices for healthcare diagnosis, scientific education and academic research.  Currently, a low cost, automated, high precision microscope has been designed and prototyped and is being tested in a research facility at Cambridge University.
 						</p>
