--- a/templates/investors.html
+++ b/templates/investors.html
@@ -6,8 +6,8 @@
 		<!-- This is our bootstrap theme -->
 		<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.0/united/bootstrap.min.css">
 		<!-- This is our custom stylesheet with anything we need to edit. -->
-		<link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
-		<link rel="stylesheet" type="text/css" href="../css/ingeniousinstruments.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/ingeniousinstruments.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
 		
 	</head>
 	<body>
@@ -77,7 +77,7 @@
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in">
+    <div id="collapseOne" class="panel-collapse collapse">
       <div class="panel-body">
         <ul>
 	       <li>Cambridge University</li>  
@@ -101,7 +101,7 @@
         <ul>
         	<li>Solves the 'pain' of diagnosing tropical deseases in developing countries to potentially save lives</li>
         	<li>Offers innovative equipment for academic education of school kids and university students in the UK and globally</li>
-            <li>Promotes academic research opportunities for scientists</li>
+            <li>Promotes academic research opportunities for scientists and innovators with affordable products</li>
         </ul>
       </div>
     </div>
@@ -110,43 +110,41 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-          Collapsible Group Item #3
+          Key Resources
         </a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        <ul>
+        	<h2>The Team</h2>
+        	<li>Josie Hughe, MEng Electrical Engineering, Cambridge University</li>
+            <li>Nikhila Ravi, MEng Bioengineering, Camrbidge University</li>
+            <li>Joe Yarnall, MEng Computer Science, Warwick University</li>
+            <li>Tom Watson, BSc Computer Science, Warwick University</li>
+            <li>Elena Gromova, MA Entrepreneurial Management, Regent's University London</li>
+        </ul>
       </div>
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-          Collapsible Group Item #3
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+          Value Proposition
         </a>
       </h4>
     </div>
-    <div id="collapse4" class="panel-collapse collapse">
+    <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        <ul>
+        	<li>Offers precision and quality of testing</li>
+        	<li>Bridges the price gap between high tech equipment and affordable equipment</li>
+        </ul>
       </div>
     </div>
   </div>
 </div>
-		</div>
-		</div>
-		<div class="footer-wrapper">
-			<footer>
-			    <div class="container">
-			        <ul>
-			            <li>About Us</li>
-			            <li>Contact</li>
-			        </ul>
-			    </div>
-			</footer>
-		</div>
 		<!-- This is jquery a lovely javascript library needed for bootstrap and hosted by Google -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<!-- This is bootstrap javascript to make dropdowns work and other cool javascript interactivity -->
