--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
 						
 						<li> <a href="#about">About</a> </li>
 						<li>
-							<a href="investors.html">Business Model</a>
+							<a href="/investors">Business Model</a>
 						</li>
 						<li>
 							<a href="/upload">Upload Image</a>
