--- a/templates/investors.html
+++ b/templates/investors.html
@@ -26,39 +26,12 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<!-- This is the menu, the list of things you could have on your website -->
 					<ul class="nav navbar-nav">
-						<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"> Invest <span class="caret"></span></a>
-							<ul class="dropdown-menu" aria-labelledby="themes">
-								<li><a href="">Key Partners</a></li>
-								<li class="divider"></li>
-								<li><a href="">Key Activities</a></li>
-								<li class="divider"></li>
-								<li><a href="">Key Resources</a></li>
-								<li class="divider"></li>
-								<li><a href="">Value Proposition</a></li>
-								<li class="divider"></li>
-								<li><a href="">Customer Relationships</a></li>
-								<li class="divider"></li>
-								<li><a href="">Channels</a></li>
-								<li class="divider"></li>
-								<li><a href="">Customer Segments</a></li>
-								<li class="divider"></li>
-								<li><a href="">Cost Structure</a></li>
-								<li class="divider"></li>
-								<li><a href="#">Revenue Streams</a></li>
-							</ul>
-						</li>
-					
-						<li>
-							<a href="#about">Team</a>
-						</li>
+	                    						<li>
+							<a href="/investors">Business Model</a>
+                    </li>
 						<li>
 							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
 							<a href="#upload">Upload Image</a>
-						</li>
-						<li><a>Shop</a></li>
-						<li>
-							<a href="#contact">Contact Us</a>
 						</li>
 					</ul>
 				</div>
