--- a/templates/upload.html
+++ b/templates/upload.html
@@ -26,25 +26,14 @@
 				</div>
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<!-- This is the menu, the list of things you could have on your website -->
-					<ul class="nav navbar-nav">
-						
-						<li> <a href="/about">About</a> </li>
+										<ul class="nav navbar-nav">
+	                    						<li>
+							<a href="/investors">Business Model</a>
+                    </li>
 						<li>
 							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
-							<a href="/upload">Upload Image</a>
+							<a href="#upload">Upload Image</a>
 						</li>
-						<li>
-							<a href="#contact">Contact Us</a>
-						</li>
-						<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes"> Invest <span class="caret"></span></a>
-							<ul class="dropdown-menu" aria-labelledby="themes">
-								<li><a href="">Before the divider</a></li>
-								<li class="divider"></li>
-								<li><a href="">After the divider</a></li>
-							</ul>
-						</li>
-						<li><a>Shop</a></li>
 					</ul>
 				</div>
 			</div>
