--- a/templates/investors.html
+++ b/templates/investors.html
@@ -31,7 +31,7 @@
                     </li>
 						<li>
 							<!-- The target="_blank" will force the link to open in a new tab, handy for keeping people on your page -->
-							<a href="#upload">Upload Image</a>
+							<a href="/upload">Upload Image</a>
 						</li>
 					</ul>
 				</div>
